# napari-filament-annotator

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml
.napari-hub/: DESCRIPTION.md
docs/: tutorial.md
img/: example_image.tif
napari-hub/: config.yml
src/napari_filament_annotator/: __init__.py  _annotation.py  _annotator.py  _params.py  _sample_data.py  _version.py  _widget.py  napari.yaml
src/napari_filament_annotator/_tests/: conftest.py  test_annotator.py  test_geom.py  test_io.py  test_postproc.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_filament_annotator/utils/: const.py  geom.py  io.py  postproc.py
