[metadata]
name = napari-filament-annotator
version = 0.1.3
summary = Annotation of filaments / curvilinear structures in 3D

description = Annotation of filament / curvilinear structures in 3D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amedyukhina/napari-filament-annotator
author = Anna Medyukhina
author_email = anna.medyukhina@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/amedyukhina/napari-filament-annotator/issues
    Documentation = https://github.com/amedyukhina/napari-filament-annotator#README.md
    Source Code = https://github.com/amedyukhina/napari-filament-annotator
    User Support = https://github.com/amedyukhina/napari-filament-annotator/issues

[options]
packages = find:
install_requires =
    Geometry3D
    networkx
    numpy
    magicgui
    pandas
    qtpy
    scipy
    imageio!=2.22.1

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-filament-annotator = napari_filament_annotator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
